--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,8 @@
+<!doctype html>
 <html lang="en">
 <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Matatu App | Home</title>
   <link rel="stylesheet" href="/stylesheets/utilities/_base.css">
   <link rel="stylesheet" href="/stylesheets/utilities/_border.css">
@@ -17,9 +20,9 @@
 <main class="main">
   <section class="landing-brand"></section>
   <section class="landing-content">
-    <h1 class="landing-title text-color-white-sm">Find Your Way Around Matatu Stops</h1>
+    <h1 class="landing-title text-color-white">Find Your Way Around Matatu Stops</h1>
     <div>
-      <h3 class="text-center text-color-white-sm">Where do you want to go?</h3>
+      <h3 class="landing-subtitle text-center text-color-white font-semibold">Where do you want to go?</h3>
       <div class="destination-search">
         <form action="/search-results" method="get">
           <label hidden="hidden" for="search-destination"></label>
@@ -36,4 +39,4 @@
 </main>
 </body>
 
-</html> 
+</html>
